update by thihakyaw

--- a/FNILDEMOAPI/src/main/resources/application.properties
+++ b/FNILDEMOAPI/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:sqlserver://localhost;databaseName=FNILP
+spring.datasource.url=jdbc:sqlserver://acehawksvr3;databaseName=FNILP
 spring.datasource.username=sa
 spring.datasource.password=123@ace
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
