--- a/FNILDEMOAPI/src/main/resources/application.properties
+++ b/FNILDEMOAPI/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:sqlserver://localhost;databaseName=FNILP
+spring.datasource.url=jdbc:sqlserver://acehawksvr3;databaseName=FNILP
 spring.datasource.username=sa
-spring.datasource.password=sasa
+spring.datasource.password=123@ace
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
